# Ancient-Language-Processing

./: .gitignore  .readthedocs.yaml  README.md  environment.yaml  pyproject.toml  pyproject.toml   requirements.txt  setup.py
.github/workflows/: docs.yml
docs/: README.rst
docs/source/: conf.py  index.rst
frontend/: package-lock.json  package.json
